# Walden3

./: Cargo.toml  README.md
Assets/: output.css  test.html
migrations/: 20260326173449_users.up.sql  20260326173450_ConsultantsTable.down.sql  20260326173450_ConsultantsTable.up.sql  20260326173703_ClientsTable.down.sql  20260326173703_ClientsTable.up.sql  20260326173708_TechniciansTable.down.sql  20260326173708_TechniciansTable.up.sql  20260326173715_ScheduleTable.down.sql  20260326173715_ScheduleTable.up.sql  20260326173721_TreatmentPlansTable.down.sql  20260326173721_TreatmentPlansTable.up.sql  20260326173726_GoalsTable.down.sql  20260326173726_GoalsTable.up.sql  20260326173732_SessionNoteTable.down.sql  20260326173732_SessionNoteTable.up.sql  20260326173739_SessionNoteGoalDataTable.down.sql  20260326173739_SessionNoteGoalDataTable.up.sql  20260417011106_users.up.bak  20260420150712_TechSchedule.down.sql  20260420150712_TechSchedule.up.sql  20260420150721_ConsSchedule.down.sql  20260420150721_ConsSchedule.up.sql
src/: app.rs  db.rs  lib.rs  logging.rs  login.rs  main.rs  main.rs~  routes.rs
style/: input.css  output.css
templates/: another-page.html  base.html  cons_sched_base.html  create_treatment_plan.html  error_template.html  get_my_id.html  goal-list.html  login.html  make_schedule.html  review_notes.html  schedule.html  sessionnote.html  todo-form.html  todo-list.html  treatment_plan_base.html  treatmentplan.html  view_clients.html  view_goals.html  view_schedules.html  view_tp.html  view_treatment_plan.bak  view_treatment_plan.html
